--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,82 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html{
+    font-family: 'Alfa Slab One', cursive;
+    /* font-family: 'Roboto Mono', monospace; */
+}
+
+
+
+/* HEADER */
+header{
+    position: fixed;
+    z-index: 100; 
+    height: 70px;
+    width: 100%;
+}
+
+nav{
+    position: absolute;
+    right: 20px;   
+    top: 40px;
+}
+
+nav li{
+    display: inline-block;
+    margin-left: 30px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+nav a{
+    font-weight: 900;
+    text-decoration: none;
+    color: black;
+    padding: 20px;
+    line-height: 50px;
+}
+
+/* MAIN */
+.container{
+    position: relative;
+    height: 100vh;
+}
+
+.shoes-container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.shoes-text-yellow{
+    color: yellow;
+
+}
+
+.shoes-text-green{
+    color: green;
+}
+
+.shoes-text-config{
+    font-size: 3.4em;
+    text-transform: uppercase;
+    position: absolute;
+    text-align: center;
+}
+
+#red{
+    background-color: red;
+}
+
+#green{
+    background-color: green;
+}
+
+#yellow{
+    background-color: yellow;
+}
