--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ html{
     /* font-family: 'Roboto Mono', monospace; */
 }
 
+img{
+    width: 100%;
+}
 
 
 /* HEADER */
@@ -51,6 +54,7 @@ header nav a{
 
 .shoes-container{
     position: absolute;
+    width: 50%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -68,7 +72,6 @@ header nav a{
 .shoes-text-config{
     font-size: 3.4em;
     text-transform: uppercase;
-    position: absolute;
     text-align: center;
 }
 
